# src/main/java/com/fiap/foodfiapp/infrastructure/rest/mapper/AddressMapper.java
@@ -1,32 +1,0 @@
-package com.fiap.foodfiapp.infrastructure.rest.mapper;
-
-import com.fiap.foodfiapp.core.domain.entity.Address;
-import com.fiap.foodfiapp.model.AddressResponse;
-import com.fiap.foodfiapp.model.CreateAddressRequest;
-import com.fiap.foodfiapp.model.UpdateAddressRequest;
-import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
-import org.mapstruct.factory.Mappers;
-
-import java.util.List;
-
-@Mapper
-public interface AddressMapper {
-    AddressMapper INSTANCE = Mappers.getMapper(AddressMapper.class);
-
-    @Mapping(target = "id", ignore = true)
-    @Mapping(target = "createdAt", ignore = true)
-    @Mapping(target = "updatedAt", ignore = true)
-    @Mapping(target = "isActive", ignore = true)
-    Address toAddress(CreateAddressRequest dto);
-
-    @Mapping(target = "id", ignore = true)
-    @Mapping(target = "createdAt", ignore = true)
-    @Mapping(target = "updatedAt", ignore = true)
-    @Mapping(target = "isActive", ignore = true)
-    Address toAddress(UpdateAddressRequest dto);
-
-    AddressResponse toAddressResponse(Address address);
-
-    List<AddressResponse> toAddressResponseList(List<Address> addresses);
-}
