# src/main/java/com/fiap/foodfiapp/infrastructure/rest/mapper/RestaurantMapper.java
@@ -1,6 +1,6 @@
 package com.fiap.foodfiapp.infrastructure.rest.mapper;
 
-import com.fiap.foodfiapp.core.domain.entity.Address;
+import com.fiap.foodfiapp.core.domain.entity.Addresses;
 import com.fiap.foodfiapp.core.domain.entity.Restaurant;
 import com.fiap.foodfiapp.model.CreateRestaurantRequest;
 import com.fiap.foodfiapp.model.RestaurantResponse;
@@ -13,13 +13,13 @@ import org.mapstruct.factory.Mappers;
 import java.util.List;
 import java.util.Collections;
 
-@Mapper(uses = {UserMapper.class, AddressMapper.class})
+@Mapper(uses = {UserMapper.class, AddressesMapper.class})
 public interface RestaurantMapper {
 
     RestaurantMapper INSTANCE = Mappers.getMapper(RestaurantMapper.class);
 
     @Mapping(target = "id", ignore = true)
-    @Mapping(target = "address", source = "address")
+    @Mapping(target = "address", source = "addresses")
     @Mapping(target = "active", ignore = true)
     @Mapping(target = "userOwnerId", source = "ownerId")
     Restaurant toRestaurant(CreateRestaurantRequest createRestaurantRequest);
@@ -30,11 +30,11 @@ public interface RestaurantMapper {
     @Mapping(target = "userOwnerId", ignore = true)
     Restaurant toRestaurant(UpdateRestaurantRequest updateRestaurantRequest);
 
-    @Mapping(source = "address", target = "address", qualifiedByName = "addressToAddressResponseList")
+    @Mapping(source = "address", target = "addresses", qualifiedByName = "addressToAddressResponseList")
     @Mapping(source = "active", target = "isActive")
     RestaurantResponse toRestaurantResponse(Restaurant restaurant);
 
-    @Mapping(source = "address", target = "address", qualifiedByName = "addressToAddressResponseList")
+    @Mapping(source = "address", target = "addresses", qualifiedByName = "addressToAddressResponseList")
     @Mapping(source = "active", target = "isActive")
     @Mapping(target = "owner", ignore = true)
     @Named("toRestaurantResponseWithoutOwner")
@@ -44,10 +44,10 @@ public interface RestaurantMapper {
     List<RestaurantResponse> toRestaurantResponseListWithoutOwner(List<Restaurant> restaurants);
 
     @Named("addressToAddressResponseList")
-    default List<com.fiap.foodfiapp.model.AddressResponse> addressToAddressResponseList(Address address) {
-        if (address == null) {
+    default List<com.fiap.foodfiapp.model.AddressesResponse> addressToAddressesResponseList(Addresses addresses) {
+        if (addresses == null) {
             return Collections.emptyList();
         }
-        return Collections.singletonList(AddressMapper.INSTANCE.toAddressResponse(address));
+        return Collections.singletonList(AddressesMapper.INSTANCE.toAddressesResponse(addresses));
     }
 }
